# house_prices_mlp

./: .dumbjump  .gitignore  README.md  board.py  check.ipynb  data_loader.py  eda.ipynb  house_prices.py  hp_tuning.py  main.py  models.py  preprocess.py  preprocess_data.py  preprocess_utils.py  pyproject.toml  test_house_prices.py  test_preprocess_data.py  train.py  train_utils.py  training.ipynb  training_loop.py  transforms  utils.py
house_prices_mlp/: board.py  data_loader.py  hp_tuning.py  main.py  models.py  preprocess.py  train_state.py  train_utils.py  training_loop.py
tests/: test_preprocess.py  test_preprocess_data.py  test_train_utils.py  test_utils.py
